--- a/src/ScryfallApi.Client/ScryfallApi.Client.csproj
+++ b/src/ScryfallApi.Client/ScryfallApi.Client.csproj
@@ -11,11 +11,12 @@
     <RepositoryUrl>https://github.com/Gonkers/Scryfall-API-Client.git</RepositoryUrl>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>scryfall scryfall-api</PackageTags>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
