More updates and examples

--- a/samples/ScryfallApi.WebSample/appsettings.json
+++ b/samples/ScryfallApi.WebSample/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ScryfallApiClient": {
+    "ScryfallApiBaseAddress": "https://api.scryfall.com/",
+    "EnableCaching": true,
+    "CacheDuration": "01:00:00",
+    "UseSlidingCacheExpiration": false
+  }
 }
