--- a/src/ScryfallApi.Client/ScryfallApi.Client.csproj
+++ b/src/ScryfallApi.Client/ScryfallApi.Client.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     <ImplicitUsings>true</ImplicitUsings>
     <PackageId>ScryfallAPI.Client</PackageId>
-    <Version>3.0</Version>
-    <Authors>Gonkers</Authors>
+    <Version>4.0</Version>
+    <Authors>https://github.com/Gonkers</Authors>
     <Company />
     <Description>.NET client library for accessing the scryfall.com API</Description>
     <PackageTags>scryfall scryfall-api</PackageTags>
@@ -15,7 +15,22 @@
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <DebugType>embedded</DebugType>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageIconUrl>https://avatars.githubusercontent.com/u/8480646?v=4</PackageIconUrl>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <PackageReference Include="System.Text.Json" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PackageReference Include="System.Text.Json" Version="6.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+  </ItemGroup>
 
   <!--<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">-->
   <!--<PropertyGroup>
@@ -23,10 +38,7 @@
   </PropertyGroup>-->
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="System.Text.Json" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
